--- a/src/app/result/result.component.css
+++ b/src/app/result/result.component.css
@@ -3,8 +3,15 @@
   width: 100%;
   color: white;
   font-family: Calibri;
-  font-size: 16px;
-  background-color: #13b188;
+  font-size: 17px;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
+  background-color: #12b188;
+}
+
+.close-button {
+  position: fixed;
+  right: 20px;
+  top: 20px;
 }
 
 .main-content {
@@ -16,9 +23,13 @@
   padding-bottom: 50px;
 }
 
+.content-text {
+  font-size: 1.1em;
+}
+
 .location-text {
   color: #ffdb30;
-  font-size: 1.8em;
+  font-size: 1.7em;
   font-weight: 500;
 }
 
@@ -27,17 +38,40 @@
   font-size: 100px;
 }
 
+.checkbox {
+  border-radius: 3px;
+  border: 2px solid white;
+  width: 30px;
+  height: 30px;
+}
+
+.checkbox-text {
+  font-size: 0.8em;
+  width: 200px;
+  line-height: 27px;
+}
+
+.change-button {
+  font-size: 0.8em;
+  line-height: 27px;
+}
+
 .leave-btn {
   height: 50px;
-  width: 200px;
+  width: 250px;
   background-color: #ffdb30;
   border-radius: 25px;
   display: table;
+  text-shadow: none;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.8);
 }
 .leave-btn .leave-btn-content {
   color: black;
   display: table-cell;
-  font-size: 1.6em;
+  font-size: 1.3em;
   font-weight: 600;
+}
+
+.reminder-text {
+  font-weight: 300;
 }
